--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.2,<9.0.0)",
+    "pylint (>=4.0.2,<5.0.0)",
+    "pre-commit (>=4.4.0,<5.0.0)"
 ]
 
 [tool.poetry]
